--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "scroll-snap": "^1.0.6",
     "vue": "^2.5.2",
     "vuex": "^3.0.1"
   },
